<resources>
    <string name="app_name">RU Burger</string>
    <string name="delicious_burgers_with_fresh_ingredients">Delicious burgers with fresh ingredients.</string>
    <string name="ru_burger">RU Burger</string>
    <string name="burger">Burger</string>
    <string name="sandwich">Sandwich</string>
    <string name="sandwichicon">sandwichIcon</string>
    <string name="tasty_sandwiches_with_a_variety_of_fillings">Tasty sandwiches with a variety of fillings.</string>
    <string name="beverage">Beverage</string>
    <string name="refreshing_drinks_to_complement_your_meal">Refreshing drinks to complement your meal.</string>
    <string name="side">Side</string>
    <string name="delicious_sides_to_complete_your_meal">Delicious sides to complete your meal.</string>
    <string name="cart">Cart</string>
    <string name="my_orders">My Orders</string>
    <string name = "menu">Main Menu</string>
    <string name="customize_your_burger">Customize Your Perfect Bite</string>
    <string name="select_patty">Select Patty</string>
    <string name="single_patty">Single Patty</string>
    <string name="double_patty">Double Patty</string>
    <string name="brioche">Brioche</string>
    <string name="wheat">Wheat</string>
    <string name="pretzel">Pretzel</string>
    <string name="select_bread">Select Bread</string>
    <string name="add_ons">Add Ons</string>
    <string name="lettuce">Lettuce</string>
    <string name="tomato">Tomato</string>
    <string name="onion">Onion</string>
    <string name="avocado">Avocado</string>
    <string name="cheese">Cheese</string>
    <string name="_1">1</string>
    <string name="price_placeholder">Price: %s</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="select_protein">Select Protein</string>
    <string name="salmon">Salmon</string>
    <string name="roast_beef">Roast Beef</string>
    <string name="chicken">Chicken</string>
    <string name="decrease_quantity">Decrease quantity\n</string>
    <string name="beverage_list_description">List of beverage options</string>
    <string name="increase_quantity">increase quantity</string>
    <string name="chips">chips</string>
    <string name="sides">Sides</string>
    <string name="choose_your_perfect_side">Choose Your Perfect Side</string>
    <string name="select_side">Select Side</string>
    <string name="select_size">Select Size</string>
    <string name="flavor_name">Flavor Name</string>
    <string name="subtotal">Subtotal: $0.00</string>
    <string name="sales_tax">Sales Tax: $0.00</string>
    <string name="total">Total: $0.00</string>
    <string name="remove_order_item">Remove Order Item</string>
    <string name="place_order">Place Order</string>
    <string name="combo">Combo</string>
    <string name="select_drink">Select Drink</string>
    <string name="make_it_combo">Make it a Combo</string>
    <string name="sandwich_placeholder">Loading Details...</string>
    <string name="minus">Minus Button\n</string>
    <string name="plus">Plus Button</string>
    <string name="cancel_button">Cancel Order</string>
</resources>