<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/brown_background"
    tools:context=".controller.CurrentOrderController">

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ru_burger"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:background="#871826"
        android:gravity="center"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/centerContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:paddingTop="12dp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottomNav"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="20dp">

            <TextView android:id="@+id/subtotal"
                android:text="@string/subtotal"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

            <TextView android:id="@+id/salesTax"
                android:text="@string/sales_tax"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

            <TextView android:id="@+id/totalAmount"
                android:text="@string/total"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>
        </LinearLayout>

        <ListView
            android:id="@+id/orderItemsList"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:dividerHeight="1dp"
            android:padding="4dp"
            android:background="#FFFFFF"
            android:layout_margin="16dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <Button
                android:id="@+id/removeItemBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remove_order_item"
                android:backgroundTint="#BA2B3E"
                android:textColor="#FFFFFF"
                android:layout_marginEnd="12dp" />

            <Button
                android:id="@+id/placeOrderBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place_order"
                android:backgroundTint="#BA2B3E"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomNav"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="12dp"
        android:orientation="horizontal"
        android:background="#871826"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/menuButton"
            android:text="@string/menu"
            android:textColor="#FFFFFF"
            android:backgroundTint="#BA2B3E"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

        <Button
            android:id="@+id/cartButton"
            android:text="@string/cart"
            android:textColor="#FFFFFF"
            android:backgroundTint="#BA2B3E"
            android:layout_marginStart="8dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

        <Button
            android:id="@+id/ordersButton"
            android:text="@string/my_orders"
            android:textColor="#FFFFFF"
            android:backgroundTint="#BA2B3E"
            android:layout_marginStart="8dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
